# pydev-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
comments/: admin.py  models.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_comment_deleted_at.py  0003_comment_user.py
comments/templates/comments/: _comment.html
frontend/scripts/: app.js
pages/: urls.py  views.py
pages/templates/pages/: about.html  contact.html  home.html  maintain.html
pydev/: asgi.py  settings.py  urls.py  wsgi.py
resumes/: admin.py  forms.py  models.py  urls.py  views.py
resumes/migrations/: 0001_initial.py  0002_resume_location.py  0003_resume_user.py  0004_favoriteresume.py  0005_resume_favorite_users.py
resumes/templates/resumes/: delete.html  edit.html  home.html  index.html  new.html  show.html
static/scripts/: app.js
static/styles/: app.css
templates/shared/: flash.html  layout.html  navbar.html
users/: urls.py  views.py
users/templates/users/: login.html  register.html
